Fix stability of server timeout