@@ -18,26 +18,17 @@ public class ServerTest extends PerfTestCase {
 
   @Test
   public void server_startup_and_shutdown() throws Exception {
+    String defaultWebJavaOptions = "-Xmx768m -XX:MaxPermSize=160m -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djruby.management.enabled=false";
     Orchestrator orchestrator = Orchestrator.builderEnv()
       // See http://wiki.apache.org/tomcat/HowTo/FasterStartUp
       // Sometimes source of entropy is too small and Tomcat spends ~20 seconds on the step :
       // "Creation of SecureRandom instance for session ID generation using [SHA1PRNG]"
       // Using /dev/urandom fixes the issue on linux
-      .addServerJvmArgument("-Djava.security.egd=file:/dev/./urandom")
-      .addServerJvmArgument("-server")
+      .setServerProperty("sonar.web.javaOpts", defaultWebJavaOptions + " -Djava.security.egd=file:/dev/./urandom")
       .build();
     try {
-      long expectedDuration = 39000;
       long startupDuration = start(orchestrator);
-      System.out.printf("Server started in %d ms\n", startupDuration);
-      String logs = FileUtils.readFileToString(orchestrator.getServer().getLogs());
-      if (logs.contains("Creation of SecureRandom instance for session ID generation using [SHA1PRNG] took")) {
-        // see http://wiki.apache.org/tomcat/HowTo/FasterStartUp#Entropy_Source
-        System.out.println("Warning - creation of Java SecureRandom instances was slow. Increasing expected startup duration");
-        // when occurs, seems to be always 17 seconds on the performance machine
-        expectedDuration -= 17500;
-      }
-      assertDurationAround(startupDuration, expectedDuration);
+      assertDurationAround(startupDuration, 22000);
 
       long shutdownDuration = stop(orchestrator);
       // can't use percent margins because logs are second-grained but not milliseconds
